# GDR-converter

./: CMakeLists.txt
include/: gdr_convert.hpp
